--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "async-express-decorator",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Transforms express routers or app for transparent work with async controllers and error handling",
   "main": "asyncRouter.js",
   "keywords": ["async", "express", "router", "decorator", "route", "app", "error", "handler", "handling"],
   "bugs": "m.m.dezhurko@gmail.com",
   "license": "MIT",
   "author": "Mikhail Dezhurko",
-  "email": "m.m.dezhurko@gmail.com"
+  "email": "m.m.dezhurko@gmail.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mikhail-dezhurko/async-express-decorator.git"
+  }
 }
